--- a/app/components/clients-popup/clients-popup.pug
+++ b/app/components/clients-popup/clients-popup.pug
@@ -11,46 +11,48 @@ include ../qr-codes/qr-codes
 include ../mifare-cards/mifare-cards
 
 mixin clients-popup()
-  +popup('Сбербанк')#clients-popup
-    +b.clients-popup
-      +inner-sidebar.__sidebar
-        +inner-sidebar-item._menu
-          +vertical-menu
-            +vertical-menu-item
-              +vertical-menu-text Общая информация
-            +vertical-menu-item
-              +vertical-menu-text Физ. лица
-              +vertical-menu-text 27
-            +vertical-menu-item
-              +vertical-menu-text Список ТС
-              +vertical-menu-text 5
-            +vertical-menu-item
-              +vertical-menu-text QR-коды
-              +vertical-menu-text 15
-            +vertical-menu-item._active
-              +vertical-menu-text MiFare карты
-              +vertical-menu-text 25
-            +vertical-menu-item
-              +vertical-menu-text Доступ в ЛК
-              +vertical-menu-text Есть
-        +inner-sidebar-item
-          +add-tags(getData('add-tags'))
-        +inner-sidebar-item.clients-popup__sidebar-btn
-          +icon-button('icon-trash')(href='#')._uppercase._shadow.clients-popup__delete-button Удалить компанию
+  +popup#clients-popup
+    +popup-header('Сбербанк')
+    +popup-body
+      +b.clients-popup
+        +inner-sidebar.__sidebar
+          +inner-sidebar-item._menu
+            +vertical-menu
+              +vertical-menu-item
+                +vertical-menu-text Общая информация
+              +vertical-menu-item
+                +vertical-menu-text Физ. лица
+                +vertical-menu-text 27
+              +vertical-menu-item
+                +vertical-menu-text Список ТС
+                +vertical-menu-text 5
+              +vertical-menu-item
+                +vertical-menu-text QR-коды
+                +vertical-menu-text 15
+              +vertical-menu-item._active
+                +vertical-menu-text MiFare карты
+                +vertical-menu-text 25
+              +vertical-menu-item
+                +vertical-menu-text Доступ в ЛК
+                +vertical-menu-text Есть
+          +inner-sidebar-item
+            +add-tags(getData('add-tags'))
+          +inner-sidebar-item.clients-popup__sidebar-btn
+            +icon-button('icon-trash')(href='#')._uppercase._shadow.clients-popup__delete-button Удалить компанию
 
-      +e.content
-        //- Общая информация
-        //+clients-common-info
-        //- Физ. лица
-        //+individual-info
-        //- Список ТС
-        //+search-bar-add('Добавить', 'Введите название партнёра, название или адрес объекта')
-        //+ts-list._transparent
-        //- QR-коды
-        //+qr-codes
-        //- MiFare карты
-        +mifare-cards
-        //- Доступ в ЛК
+        +e.content
+          //- Общая информация
+          //+clients-common-info
+          //- Физ. лица
+          //+individual-info
+          //- Список ТС
+          //+search-bar-add('Добавить', 'Введите название партнёра, название или адрес объекта')
+          //+ts-list._transparent
+          //- QR-коды
+          //+qr-codes
+          //- MiFare карты
+          +mifare-cards
+          //- Доступ в ЛК
 
   //- qr-codes dependencies
   +qr-codes-templates
