--- a/app/blocks/indicators/indicators.scss
+++ b/app/blocks/indicators/indicators.scss
@@ -2,8 +2,29 @@
   display: flex;
   align-items: center;
 
+  &_vertical {
+    flex-direction: column;
+    align-items: flex-start;
+
+    .indicators__item {
+      width: 100%;
+
+      &:not(:last-child) {
+        margin-bottom: 13px;
+      }
+    }
+  }
+
   &__item {
     display: inline-block;
+
+    &_active {
+
+      .indicators__text {
+        font-weight: 500;
+        color: #f9ad1a;
+      }
+    }
 
     &:hover { opacity: .5; }
 
@@ -13,6 +34,7 @@
     &_brown .indicators__circle { background-color: #b76611; }
     &_yellow .indicators__circle { background-color: #ffd966; }
     &_grey .indicators__circle { background-color: #b3b3b3; }
+    &_green .indicators__circle { background-color: #8ac926; }
   }
 
   &__circle {
