--- a/app/blocks/inner-sidebar/inner-sidebar.scss
+++ b/app/blocks/inner-sidebar/inner-sidebar.scss
@@ -28,6 +28,11 @@
     display: flex;
     align-items: center;
     width: 100%;
+    margin-bottom: 8px;
+
+    .inner-sidebar__heading {
+      margin-bottom: 0;
+    }
   }
 
   &__badge {
@@ -54,6 +59,9 @@
     margin-left: -5px;
     transition: color .25s ease-in-out;
     padding-right: 8px;
+  }
+
+  a.inner-sidebar__heading { /* stylelint-disable-line */
 
     &:hover, &_active { color: #f9ad1a; }
   }
