--- a/app/pages/test/test.pug
+++ b/app/pages/test/test.pug
@@ -16,6 +16,15 @@ include ../../components/mifare-popup/mifare-popup
 include ../../components/edit-card-data-popup/edit-card-data-popup
 include ../../components/notifications-popup/notifications-popup
 include ../../components/alarms-popup/alarms-popup
+include ../../components/clients-common-info/clients-common-info
+include ../../components/individual-info/individual-info
+include ../../components/ts-list/ts-list
+include ../../components/search-bar-add/search-bar-add
+include ../../components/qr-codes/qr-codes
+include ../../components/mifare-cards/mifare-cards
+include ../../components/mifare-card-info/mifare-card-info
+include ../../components/mifare-card-sessions/mifare-card-sessions
+include ../../components/mifare-card-transactions/mifare-card-transactions
 
 block head
   - var pageTitle = 'RPS — Главная'
@@ -52,9 +61,46 @@ block layout-right
       div(style="display: inline-block; margin: 15px")
         +button(href='#' data-target-popup='#alarms-popup')._uppercase._grey.js-show-popup Тревоги
 
-      +add-to-blacklist
-      +clients-popup
-      +mifare-popup
-      +edit-card-data-popup
-      +notifications-popup
-      +alarms-popup
+    div(style="margin: 20px")
+      //- Общая информация
+      +clients-common-info
+    div(style="margin: 20px")
+      //- Физ. лица
+      +individual-info
+    div(style="margin: 20px")
+      //- Список ТС
+      +search-bar-add('Добавить', 'Введите название партнёра, название или адрес объекта')
+      +ts-list._transparent
+    div(style="margin: 20px")
+      //- QR-коды
+      +qr-codes
+    div(style="margin: 20px")
+      //- MiFare карты
+      +mifare-cards
+    div(style="margin: 20px")
+      //- Информация
+      +mifare-card-info
+    div(style="margin: 20px")
+      //- Сессии
+      +mifare-card-sessions
+    div(style="margin: 20px")
+      //- Транзакции
+      +mifare-card-transactions
+
+    div(style="margin: 20px")
+      //- Информация
+      +mifare-card-info
+    div(style="margin: 20px")
+      //- Сессии
+      +mifare-card-sessions
+    div(style="margin: 20px")
+      //- Транзакции
+      +mifare-card-transactions
+
+    +mifare-card-transactions
+    +add-to-blacklist
+    +clients-popup
+    +mifare-popup
+    +edit-card-data-popup
+    +notifications-popup
+    +alarms-popup
