--- a/app/components/sidebar/sidebar.pug
+++ b/app/components/sidebar/sidebar.pug
@@ -10,7 +10,7 @@ mixin sidebar()
       +aside-menu-bottom-block
         +aside-menu-item("#", "Выход", "icon-ui-7")
       +aside-menu-item("control-center.html", "Центр управления", "icon-ui-1").active
-      +aside-menu-item("/", "Клиенты", "icon-ui-2")
+      +aside-menu-item("index.html", "Клиенты", "icon-ui-2")
       +aside-menu-item("#", "Касса", "icon-ui-3")
       +aside-menu-item("statistics.html", "Статистика", "icon-ui-4")
       +aside-menu-item("settings-devices-zone.html", "Настройки", "icon-ui-5")
