--- a/app/blocks/button/button.scss
+++ b/app/blocks/button/button.scss
@@ -48,6 +48,19 @@
     &:hover { box-shadow: 0 2px 4px rgba(0, 0, 0, .1), inset 0 2px 0 #fff; }
   }
 
+  &_orange {
+    border-radius: 3px;
+    border: 1px solid #bf8511;
+    background-color: #f9ae17;
+    color: #fff;
+    font-size: 14px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    box-shadow: 0 2px 4px rgba(191, 133, 17, .5);
+
+    &:hover { background-color: lighten(#f9ae17, 5%); }
+  }
+
   &_text_green {
     color: #0c6;
     font-size: 14px;
