--- a/app/components/clients-common-info/clients-common-info.pug
+++ b/app/components/clients-common-info/clients-common-info.pug
@@ -39,4 +39,4 @@ mixin clients-common-info()
           +input
 
     +e.save-button
-      +button(href='#')._green._uppercase._align_center Сохранить изменения
+      +button.BUTTON(type='submit')._green._uppercase._align_center Сохранить изменения
