--- a/app/components/counter/counter.pug
+++ b/app/components/counter/counter.pug
@@ -6,6 +6,6 @@ mixin counter()
     +e.col._input
       +input.js-counter-input
     +e.col
-      +icon-button('icon-minus')(href='#' data-action='minus')._shadow.__button.js-counter-button
+      +icon-button('icon-minus').BUTTON(data-action='minus')._shadow.__button.js-counter-button
     +e.col
-      +icon-button('icon-close')(href='#' data-action='plus')._shadow.__button.js-counter-button
+      +icon-button('icon-close').BUTTON(data-action='plus')._shadow.__button.js-counter-button
