--- a/app/components/mifare-card-info/mifare-card-info.pug
+++ b/app/components/mifare-card-info/mifare-card-info.pug
@@ -66,4 +66,4 @@ mixin mifare-card-info()
           +select([{title: 'Разовый', value: 1}, {title: 'Разовый 1', value: 2}])
 
     +e.button-wrap
-      +button()(href='#')._green._uppercase._align_center Сохранить изменения
+      +button.BUTTON(type='submit')._green._uppercase._align_center Сохранить изменения
