--- a/app/components/qr-codes/qr-codes.pug
+++ b/app/components/qr-codes/qr-codes.pug
@@ -18,6 +18,6 @@ mixin qr-codes()
       - for (var i = 0; i < 5; i++)
         +accordion-item('QR-Код #1, скидка 100р.')
           +qr-form.__form
-            +button()(href='#')._text_grey._uppercase Сохранить
-            +button()(href='#')._text_green._uppercase Сохранить как шаблон
-            +button()(href='#')._text_red._uppercase Удалить
+            +button.BUTTON._text_grey._uppercase Сохранить
+            +button.BUTTON._text_green._uppercase Сохранить как шаблон
+            +button.BUTTON._text_red._uppercase Удалить
