--- a/app/components/search-filter/search-filter.pug
+++ b/app/components/search-filter/search-filter.pug
@@ -57,16 +57,16 @@ mixin search-filter()
           +e.block._default
             +e.controls
               +e.col._flexible
-                +button(href='#')._text_grey._uppercase.__reset Сбросить
+                +button.BUTTON._text_grey._uppercase.__reset Сбросить
               +e.col
-                +button(href='#')._grey._uppercase.js-search-filter-action-save Сохранить фильтр
+                +button.BUTTON._grey._uppercase.js-search-filter-action-save Сохранить фильтр
               +e.col
-                +button(href='#')._green._uppercase Применить
+                +button.BUTTON._green._uppercase Применить
           +e.block._saving
             +e.controls
               +e.col._flexible
                 +input
               +e.col
-                +button(href='#')._green._uppercase Готово
+                +button.BUTTON._green._uppercase Готово
               +e.col
-                +button(href='#')._text_grey._uppercase.__reset.js-search-filter-action-abort Отмена
+                +button.BUTTON._text_grey._uppercase.__reset.js-search-filter-action-abort Отмена
