--- a/app/components/setting-actions/setting-actions.pug
+++ b/app/components/setting-actions/setting-actions.pug
@@ -5,5 +5,5 @@ mixin setting-actions()
     +e.heading
       block
     +e.actions
-      +button()(href='#')._text_green._uppercase.__action Сохранить
-      +button()(href='#')._text_red._uppercase.__action Удалить
+      +button.BUTTON._text_green._uppercase.__action Сохранить
+      +button.BUTTON._text_red._uppercase.__action Удалить
