--- a/app/components/ts-list/ts-list.pug
+++ b/app/components/ts-list/ts-list.pug
@@ -57,6 +57,6 @@ mixin ts-list()
             +input()(value='Я317ВК78')._size_small._text-like
           +default-table-cell._align_right.ts-list__cell
             .ts-list__actions
-              +icon-button('icon-pen')(href='#')._shadow._size_small.ts-list__action._edit
-              +icon-button('icon-accept')(href='#')._green._size_small.ts-list__action._save
-              +icon-button('icon-close')(href='#')._red._size_small.ts-list__action._remove
+              +icon-button('icon-pen').BUTTON._shadow._size_small.ts-list__action._edit
+              +icon-button('icon-accept').BUTTON._green._size_small.ts-list__action._save
+              +icon-button('icon-close').BUTTON._red._size_small.ts-list__action._remove
