--- a/app/pages/control-center/control-center.pug
+++ b/app/pages/control-center/control-center.pug
@@ -72,10 +72,10 @@ block layout-right
           +e.VIDEO(autoplay=true loop=true).video
             source(src='video.mp4' type='video/mp4')
         +e.col._buttons
-          +button()(href='#')._grey.__button Проезд одного автомобиля
-          +button()(href='#')._grey.__button Проезд по QR-коду
-          +icon-button('icon-volume')(href='#')._shadow.__button_small._locked
-          +icon-button('icon-phone')(href='#')._shadow.__button_small
+          +button.BUTTON._grey.__button Проезд одного автомобиля
+          +button.BUTTON._grey.__button Проезд по QR-коду
+          +icon-button('icon-volume').BUTTON._shadow.__button_small._locked
+          +icon-button('icon-phone').BUTTON._shadow.__button_small
 
       +table
         +table-header.control-center__table-header
