--- a/app/blocks/button/button.scss
+++ b/app/blocks/button/button.scss
@@ -66,6 +66,7 @@
     font-size: 14px;
     font-weight: 500;
     letter-spacing: 1px;
+    background-color: transparent;
 
     &:hover { color: #0ee877; }
   }
@@ -75,6 +76,7 @@
     font-size: 14px;
     font-weight: 500;
     letter-spacing: 1px;
+    background-color: transparent;
 
     &:hover { color: #202325; }
   }
@@ -84,6 +86,7 @@
     font-size: 14px;
     font-weight: 500;
     letter-spacing: 1px;
+    background-color: transparent;
 
     &:hover { color: #ff333a; }
   }
