--- a/app/components/qr-codes-templates/qr-codes-templates.pug
+++ b/app/components/qr-codes-templates/qr-codes-templates.pug
@@ -18,5 +18,5 @@ mixin qr-codes-templates()
           - for (var i = 0; i < 5; i++)
             +accordion-item('QR-Код #1, скидка 100р.', { name: 'name', value: 'value', label: 'Выбрать'})
               +qr-form
-                +button()(href='#')._text_grey._uppercase Сохранить
-                +button()(href='#')._text_red._uppercase Удалить
+                +button.BUTTON._text_grey._uppercase Сохранить
+                +button.BUTTON._text_red._uppercase Удалить
