--- a/app/components/mifare-popup/mifare-popup.pug
+++ b/app/components/mifare-popup/mifare-popup.pug
@@ -31,6 +31,6 @@ mixin mifare-popup()
             //- Информация
             //- +mifare-card-info
             //- Сессии
-            //+mifare-card-sessions
+            //- +mifare-card-sessions
             //- Транзакции
             +mifare-card-transactions
