--- a/app/layouts/head.pug
+++ b/app/layouts/head.pug
@@ -9,6 +9,9 @@ head
   meta(name='keywords' content=pageKeywords || '')
 
   link(href='favicon.ico' rel='shortcut icon')
+  link(href='assets/styles/libs/daterangepicker.min.css' rel='stylesheet')
   link(href='assets/styles/app.min.css' rel='stylesheet')
 
   script(src='assets/scripts/libs/jquery-3.2.1.min.js')
+  script(src='assets/scripts/libs/moment.min.js')
+  script(src='assets/scripts/libs/jquery.daterangepicker.min.js')
