--- a/app/pages/settings-devices-device/settings-devices-device.pug
+++ b/app/pages/settings-devices-device/settings-devices-device.pug
@@ -7,6 +7,7 @@ include ../../blocks/field/field
 include ../../blocks/input/input
 include ../../blocks/select/select
 include ../../blocks/fieldset/fieldset
+include ../../blocks/datepicker/datepicker
 include ../../components/sidebar/sidebar
 include ../../components/header/header
 include ../../components/actions-header/actions-header
@@ -31,8 +32,7 @@ block layout-right
       +actions-header-col._flexible
         +search-bar('Номер карты или номер транспортного средства...')._white.__search-bar
       +actions-header-col
-        //- TODO заменить на datepicker
-        +search-bar('тест')._white.__search-bar
+        +datepicker
 
     +e.container
       +inner-sidebar
