--- a/app/pages/settings-devices-zone/settings-devices-zone.pug
+++ b/app/pages/settings-devices-zone/settings-devices-zone.pug
@@ -6,6 +6,7 @@ include ../../blocks/vertical-menu/vertical-menu
 include ../../blocks/field/field
 include ../../blocks/input/input
 include ../../blocks/select/select
+include ../../blocks/datepicker/datepicker
 include ../../components/sidebar/sidebar
 include ../../components/header/header
 include ../../components/actions-header/actions-header
@@ -30,8 +31,7 @@ block layout-right
       +actions-header-col._flexible
         +search-bar('Номер карты или номер транспортного средства...')._white.__search-bar
       +actions-header-col
-        //- TODO заменить на datepicker
-        +search-bar('тест')._white.__search-bar
+        +datepicker
 
     +e.container
       +inner-sidebar
