--- a/app/components/notifications-popup/notifications-popup.pug
+++ b/app/components/notifications-popup/notifications-popup.pug
@@ -38,7 +38,7 @@ mixin notifications-popup()
               +notification-info-col
                 +notification-info-heading Системное уведомление
                 +notification-info-body
-                  +notification-info-text Обычное системное уведомление, которое чтобы прочитать нужно нажать на кружок слева
+                  +notification-info-text Обычное системное уведомление, которое чтобы прочитать нужно нажать на кружок слева. Обычное системное уведомление, которое чтобы прочитать нужно нажать на кружок слева. Обычное системное уведомление, которое чтобы прочитать нужно нажать на кружок слева.
             +notification-info.__item
               +notification-info-col._align_center
                 +notification-info-heading 13:35
@@ -47,6 +47,4 @@ mixin notifications-popup()
                 +notification-info-heading Поддержка
                 +notification-info-body
                   +notification-info-text Вам ответили по проблеме: 
-                  +notification-info-text.A(href='#') Нет никакой связи со стойками передней парковки
-
-        +icon-button('icon-caret')(href='#')._shadow._uppercase.__expand Развернуть
+                  +notification-info-text.A(href='#') Нет никакой связи со стойками передней парковки Нет никакой связи со стойками передней парковки Нет никакой связи со стойками передней парковки
